--- a/modules/1237/pages/doc5-rescripts.adoc
+++ b/modules/1237/pages/doc5-rescripts.adoc
@@ -172,7 +172,7 @@ Dispatched by Bolte
      with this directive.  
      Bückeburg,  
      27 October 1800.  
-     By order of the Count: p  
+     By order of the Count
 
                             Mkaas  
      Juris Danckwerk  
