--- a/modules/1237/pages/doc5-full.adoc
+++ b/modules/1237/pages/doc5-full.adoc
@@ -1,183 +1,217 @@
-= Full Document View 
+= Document 5: Cammer Directive (October 27, 1800)
 :page-role: wide
 
-== Cammer Rescript
+[cols="1a,1a",frame=none,grid=none]
+|===
+|First Page|Backside of 1^st^ Page
+
+|
+image::09-right-page.png[scale=25,link=self]
+
+|
+image::10-left-page.png[scale=25,link=self]
+|===
+
+== Document 5 Header
 
 [cols="1a,1a",options="header",frame=none,grid=none]
 |===
 |Transliteration|Translation
 
 |
-[verse]
-____
-ad nr. D: 322. S. S.     
+....
+ad nr. D: 322. [S?]. S.                          5
 Concept Cammer : Rescripts  
 an die Beamte zu Buckeburg  
-  
-  V. G. G.  
-  Wir laßen Euch auf Euren Bericht  
-  vom 18. d. M. in Ansehung der dem  
-  Colon Kruckeberg Nr: 10 zu Beren-  
-  busch, behuf zur Vergrößerung  
-  seines Hofraums und Gartens zu  
-  respective 19 Nuten 44 Fus dei¬  
-  u: 1 Rüte 90 Fus ausgegaßenen  
-  Plätze, und des davon zu Michaelis  
-  dieses Jahrs zum erstenmahl  
-  und künftig jährlich mit zweÿy Mg.  
-  1 d. zu entrichtenden Rottzinses  
-  hiedurch ohnverhalten: daß Wir  
-  die Ausweisung dieser Plätze unter  
-
-Cap: p: Bolte. [futher left in original] 
-
-  den Euch durch Unser Rescript vom  
-  11. Merz 1799, eröfneten Bedin-  
-  gungen, sowie auch jenen Ansatz  
-  des Rottzinses genehmiget haben.  
-  Ihr habt also dahin zu sehen damit  
-  der Colon Kruckeberg die ihm  
-  von Euch ohne Zweifel bekannt  
-  gemachten Bedingungen genau  
-  erfüllen möge, wie denn derselbe  
-  nunmehr das bestimte Kaufgeld  
-  per 4 Rute mit 2.4. nigl: folglich  
-  überhaupt vierzehn Rthlr  
-  8 mgl: 1 d. an Unsere Lammeroasse  
-  zuzahlen hat. Wir verbleiben,  
-  Buckeburg d 27. October 1800  
-  Anstatt p  
-                        A Waag  
-____
+....
 
 |
-[verse]
-____
+....
 To (or concerning) case D:322, as above.
-Draft: Cammer directive
-To the officials in Bückeburg
-
-   In the Name of the Government
-   
-   We hereby respond to your report dated the
-   18th of this month concerning the land
-   allocated to the farmer Krückeberg, No. 10 in
-   Berenbusch, for the purpose of enlarging his
-   farmyard and garden—specifically, a total
-   area of 19 rods and 44 feet plus 1 rod and 90
-   feet.
-   
-   This land is to be subject, starting from
-   Michaelmas (29 September) of this year, to an
-   annual ground rent of 2 Mariengroschen and 1
-   Pfennig.
-   
-   We hereby confirm without reservation:
-   
-   That we approve the assignment of this land
-   
-Captain: p. Bolte
-   
-   to him under the same terms and conditions
-   already communicated to you in Our official
-   order dated 11 March 1799, and we also
-   approve the proposed annual ground rent.
-   
-   You are to ensure that Farmer Krückeberg
-   fulfills all the conditions you have no doubt
-   already made known to him.
-   
-   He is now required to pay the set purchase
-   price at a rate of 2 Reichsthaler and 4
-   Mariengroschen per rod, totaling an amount of
-   14 Reichsthaler, 8 Mariengroschen, and 1
-   Pfennig. This payment is to be made to Our
-   revenue office.
-   
-   We remain, Bückeburg, 27 October 1800 on
-   behalf of the Cammer
-                               A. Waag
-____
+Draft: Cammer Directive
+to the Officials in Bückeburg
+....
 |===
 
-== Cammer Anweisung (Collection Order)
 
-[cols="1a,1a"]
+[[rescript1]]
+== Approval of Land Assignment – Krückeberg, Berenbusch
+
+[cols="1a,1a",options="header",frame=none,grid=none]
 |===
 |Transliteration|Translation
 
 |
-[verse]
-____
-Concept Cammer: Anweisung H.  
-an den Cammerwontmeister  
-Mgr Danckwerk  
+....
+ad nr. D: 322. F. S.                          5  
+Concept Cammer : Rescripts  
+an die Beamte zu Buckeburg  
   
-Der Cammerrentmeister Hackmann  
-wird hiemit angewiesen, von dem  
-Colon Kruckeberg Nr: 10, zu Schirn  
-eichen für die demselben zur Ver-  
-größerung seines Gartens u. Hof-  
+       V. G. G.  
+       Wir laßen Euch auf Euren Bericht  
+       vom 18. d. M. in Ansehung der dem  
+       Colon Kruckeberg Nr: 10 zu Beren-  
+       busch, behuf zur Vergrößerung  
+       seines Hofraums und Gartens zu  
+       respective 19 Nuten 44 Fus dei¬  
+       u: 1 Rüte 90 Fus ausgegaßenen  
+       Plätze, und des davon zu Michaelis  
+       dieses Jahrs zum erstenmahl  
+       und künftig jährlich mit zweÿy Mg.  
+       1 d. zu entrichtenden Rottzinses  
+       hiedurch ohnverhalten: daß Wir  
+       die Ausweisung dieser Plätze unter  
 
-Exp: per Boltesp  
+Exp: p[er]: Bolte.  
 
-raums ausgewiesene Plätze, welche  
-zusam̅en 21 Ruten 34 Fus Dec:  
-das Kaufgeld per Räte mit 20 4 mgl. u  
-betragen.  
-also vierzehn Rthlr 8 mg. 1 d. zu  
-erheben, in der Cammerrechnung  
-gehöriges Orts zu vereinnahmen,  
-und solche mit dieser Anweisung  
-zu rechtfertigen. Bückeburg  
-den 27. October 1800.  
-Gräflich : p  
-                       Mkaas  
-Juris Danckwerk  
-           Wint  
-  
-                       Wipperman  
-____
+       den Euch durch Unser Rescript vom  
+       11. Merz 1799, eröfneten Bedin-  
+       gungen, sowie auch jenen Ansatz  
+       des Rottzinses genehmiget haben.  
+       Ihr habt also dahin zu sehen damit  
+       der Colon Kruckeberg die ihm  
+       von Euch ohne Zweifel bekannt  
+       gemachten Bedingungen genau  
+       erfüllen möge, wie denn derselbe  
+       nunmehr das bestimte Kaufgeld  
+       per 4 Rute mit 2.4. nigl: folglich  
+       überhaupt vierzehn Rthlr  
+       8 mgl: 1 d. an Unsere Lammeroasse  
+       zuzahlen hat. Wir verbleiben,  
+       Buckeburg d 27. October 1800  
+       Anstatt p[er]  
+                        
+
+                               Mkaas
+                           Wint
+[Mgr?] Danckwerk 
+....
 
 |
-[verse]
-____
-(Cammer directive for collecting the purchase payment)
+....
+Regarding No. D: 322, as noted above
+Draft: Cammer directive
+To the officials in Bückeburg
 
-Cammer Directive: Instruction H.
-to the Chamber Steward
-Mgr. Danckwerk
+       Very Gracious Lords,
+       
+       In reply to your report dated the 18th
+       of this month concerning the land
+       set aside for the farmer Krückeberg, No. 10
+       in Berenbusch, for the purpose of enlarging
+       his farmyard and garden—specifically, a total
+       area of 19 rods and 44 feet plus 1 rod and 90
+       feet.
+       
+       This land is to be subject, starting from Michaelmas
+       (29 September) of this year, to an annual ground
+       rent of 2 Mariengroschen and 1 Pfennig.
+       
+       We hereby confirm without reservation:
+                
+Dispatched by: Bolte.
 
-The Chamber Treasurer Hackmann
-is hereby instructed to collect from
-Colon Kruckeberg No. 10, in Schirneichen,
-for the plots assigned to him for the
-enlargement of his garden and farmyard—
-
-(Expedited by Bolte)
-
-—plots which together measure
-21 rods and 34 feet (decimal),
-a purchase price calculated at
-20 groschen and 4 pfennigs per rod,
-amounting to a total of
-14 Reichsthaler, 8 groschen, 1 pfennig.
-
-This amount is to be collected,
-recorded in the appropriate place
-in the chamber’s accounting records,
-and this directive is to serve as
-the official justification.
-
-Bückeburg,
-27 October 1800
-
-By order of the Count:
-         Mkaas
-Juris Danckwerk
-    Wint
-
-        Wipperman
-____
-
+       That we approve the assignment of this land to
+       him under the same terms and conditions already
+       communicated to you in Our official order dated
+       11 March 1799, and we also approve the proposed
+       annual ground rent.
+       
+       You are to ensure that Farmer Krückeberg fulfills
+       all the conditions you have no doubt already made
+       known to him.
+       
+       He is now required to pay the set purchase price at
+       a rate of 2 Reichsthaler and 4 Mariengroschen per rod,
+       totaling 14 Reichsthaler, 8 Mariengroschen,
+       and 1 Pfennig. This payment must be made to Our revenue
+       office.
+       
+       We remain,
+       Bückeburg, 27 October 1800
+       On behalf of the Count
+                 
+                                      Mkaas
+                                    Wint
+[Mgr?] Danckwerk
+....
 |===
+
+[[rescript2]]
+== Execution of Purchase Contracts – Krückeberg, Berenbusch
+
+[cols="1a,1a",options="header",frame=none,grid=none]
+|===
+|Transliteration|Translation
+
+|
+....
+Concept Cammer: Anweisung H.  
+an den Cammerrentmeister
+Stackmann
+  
+     Der Cammerrentmeister Stackmann  
+     wird hiemit angewiesen, von dem  
+     Colon Krückeberg Nr: 10, zu Schirn- 
+     eichen für die demselben zur Ver-  
+     größerung seines Gartens u. Hof-  
+
+Exp: per Boltesp
+
+     raums ausgewiesene Plätze, welche         
+     zusam̅en 21 Ruten 34 Fuß Dec:  
+     betragen, das Kaufgeld per Rute mit 24 mgl. u  
+     also vierzehn Rthlr 8 mgl. 1 d. zu  
+     erheben, in der Cammerrechnung  
+     gehöriges Orts zu vereinnahmen,  
+     und solche mit dieser Anweisung  
+     zu rechtfertigen. Bückeburg  
+     den 27. October 1800.  
+     Gräflich : p  
+                            Mkaas  
+     Juris Danckwerk  
+     Wint  
+         
+
+
+
+     ---------  
+     Wipperman  
+....
+
+|
+....
+Concept Cammer: Directive
+to the Chamber Rentmaster
+Stackmann
+
+The Chamber Rentmaster, Stackmann, is hereby instructed to collect from tenant farmer Krückeberg, No. 10, at
+Stirneichen, the purchase price for the plots assigned to him for enlarging his garden and farmyard.
+
+These plots together measure 21 rods and 34 feet (decimal). The purchase price is to be calculated at 24
+Mariengroschen per rod, amounting to a total of 14 Reichsthaler, 8 Mariengroschen, and 1 Pfennig.
+
+This sum is to be entered in the Chamber accounts under the appropriate heading and accounted for with this
+directive.
+
+(Dispatched by Bolte.)
+
+Bückeburg, 27 October 1800
+For the Count
+
+Mkaas
+Juris Danckwerk
+Wint
+
+Wippermann
+....
+|===
+
+[NOTE]
+====
+*Stirneichen* — The term appears here after “Nr: 10” in reference to Colon Krückeberg’s property.  He lived in
+Berenbusch not "Stirneichen", which oes not correspond to any known village (*Ort*) in the region per *Meyers Orts-
+und Verkehrslexikon* (1912). It may represent a misrecorded place name or possibly a *Flurname* (traditional field
+name) used locally in the late 18th–early 19th century.  Its exact reference remains uncertain.
+====
+
