--- a/modules/1237/pages/doc5-full.adoc
+++ b/modules/1237/pages/doc5-full.adoc
@@ -12,27 +12,6 @@ image::09-right-page.png[scale=25,link=self]
 image::10-left-page.png[scale=25,link=self]
 |===
 
-== Document 5 Header
-
-[cols="1a,1a",options="header",frame=none,grid=none]
-|===
-|Transliteration|Translation
-
-|
-....
-ad nr. D: 322. [S?]. S.                          5
-Concept Cammer : Rescripts  
-an die Beamte zu Buckeburg  
-....
-
-|
-....
-To (or concerning) case D:322, as above.
-Draft: Cammer Directive
-to the Officials in Bückeburg
-....
-|===
-
 
 [[rescript1]]
 == Approval of Land Assignment – Krückeberg, Berenbusch
@@ -47,43 +26,43 @@ ad nr. D: 322. F. S.                          5
 Concept Cammer : Rescripts  
 an die Beamte zu Buckeburg  
   
-       V. G. G.  
-       Wir laßen Euch auf Euren Bericht  
-       vom 18. d. M. in Ansehung der dem  
-       Colon Kruckeberg Nr: 10 zu Beren-  
-       busch, behuf zur Vergrößerung  
-       seines Hofraums und Gartens zu  
-       respective 19 Nuten 44 Fus dei¬  
-       u: 1 Rüte 90 Fus ausgegaßenen  
-       Plätze, und des davon zu Michaelis  
-       dieses Jahrs zum erstenmahl  
-       und künftig jährlich mit zweÿy Mg.  
-       1 d. zu entrichtenden Rottzinses  
-       hiedurch ohnverhalten: daß Wir  
-       die Ausweisung dieser Plätze unter  
+V. G. G.  
+Wir laßen Euch auf Euren Bericht  
+vom 18. d. M. in Ansehung der dem  
+Colon Kruckeberg Nr: 10 zu Beren-  
+busch, behuf zur Vergrößerung  
+seines Hofraums und Gartens zu  
+respective 19 Nuten 44 Fus dei¬  
+u: 1 Rüte 90 Fus ausgegaßenen  
+Plätze, und des davon zu Michaelis  
+dieses Jahrs zum erstenmahl  
+und künftig jährlich mit zweÿy Mg.  
+1 d. zu entrichtenden Rottzinses  
+hiedurch ohnverhalten: daß Wir  
+die Ausweisung dieser Plätze unter  
 
 Exp: p[er]: Bolte.  
 
-       den Euch durch Unser Rescript vom  
-       11. Merz 1799, eröfneten Bedin-  
-       gungen, sowie auch jenen Ansatz  
-       des Rottzinses genehmiget haben.  
-       Ihr habt also dahin zu sehen damit  
-       der Colon Kruckeberg die ihm  
-       von Euch ohne Zweifel bekannt  
-       gemachten Bedingungen genau  
-       erfüllen möge, wie denn derselbe  
-       nunmehr das bestimte Kaufgeld  
-       per 4 Rute mit 2.4. nigl: folglich  
-       überhaupt vierzehn Rthlr  
-       8 mgl: 1 d. an Unsere Lammeroasse  
-       zuzahlen hat. Wir verbleiben,  
-       Buckeburg d 27. October 1800  
-       Anstatt p[er]  
+den Euch durch Unser Rescript vom  
+11. Merz 1799, eröfneten Bedin-  
+gungen, sowie auch jenen Ansatz  
+des Rottzinses genehmiget haben.  
+Ihr habt also dahin zu sehen damit  
+der Colon Kruckeberg die ihm  
+von Euch ohne Zweifel bekannt  
+gemachten Bedingungen genau  
+erfüllen möge, wie denn derselbe  
+nunmehr das bestimte Kaufgeld  
+per 4 Rute mit 2.4. nigl: folglich  
+überhaupt vierzehn Rthlr  
+8 mgl: 1 d. an Unsere Lammeroasse  
+zuzahlen hat. Wir verbleiben,  
+Buckeburg d 27. October 1800  
+Anstatt p[er]  
                         
 
-                               Mkaas
-                           Wint
+                   Mkaas
+              Wint
 [Mgr?] Danckwerk 
 ....
 
@@ -93,47 +72,47 @@ Regarding No. D: 322, as noted above
 Draft: Cammer directive
 To the officials in Bückeburg
 
-       Very Gracious Lords,
-       
-       In reply to your report dated the 18th
-       of this month concerning the land
-       set aside for the farmer Krückeberg, No. 10
-       in Berenbusch, for the purpose of enlarging
-       his farmyard and garden—specifically, a total
-       area of 19 rods and 44 feet plus 1 rod and 90
-       feet.
-       
-       This land is to be subject, starting from Michaelmas
-       (29 September) of this year, to an annual ground
-       rent of 2 Mariengroschen and 1 Pfennig.
-       
-       We hereby confirm without reservation:
-                
-Dispatched by: Bolte.
+Very Gracious Lords,
 
-       That we approve the assignment of this land to
-       him under the same terms and conditions already
-       communicated to you in Our official order dated
-       11 March 1799, and we also approve the proposed
-       annual ground rent.
-       
-       You are to ensure that Farmer Krückeberg fulfills
-       all the conditions you have no doubt already made
-       known to him.
-       
-       He is now required to pay the set purchase price at
-       a rate of 2 Reichsthaler and 4 Mariengroschen per rod,
-       totaling 14 Reichsthaler, 8 Mariengroschen,
-       and 1 Pfennig. This payment must be made to Our revenue
-       office.
-       
-       We remain,
-       Bückeburg, 27 October 1800
-       On behalf of the Count
-                 
-                                      Mkaas
-                                    Wint
+In reply to your report dated the 18th
+of this month concerning the land
+set aside for the farmer Krückeberg, No. 10
+in Berenbusch, for the purpose of enlarging
+his farmyard and garden—specifically, a total
+area of 19 rods and 44 feet plus 1 rod and 90
+feet.
+
+This land is to be subject, starting from Michaelmas
+(29 September) of this year, to an annual ground
+rent of 2 Mariengroschen and 1 Pfennig.
+
+We hereby confirm without reservation:
+                
+That we approve the assignment of this land to
+him under the same terms and conditions already
+communicated to you in Our official order dated
+11 March 1799, and we also approve the proposed
+annual ground rent.
+
+You are to ensure that Farmer Krückeberg fulfills
+all the conditions you have no doubt already made
+known to him.
+
+He is now required to pay the set purchase price at
+a rate of 2 Reichsthaler and 4 Mariengroschen per rod,
+totaling 14 Reichsthaler, 8 Mariengroschen,
+and 1 Pfennig. This payment must be made to Our revenue
+office.
+
+We remain,
+Bückeburg, 27 October 1800
+On behalf of the Count
+          
+                               Mkaas
+                             Wint
 [Mgr?] Danckwerk
+
+(Dispatched by: Bolte)
 ....
 |===
 
@@ -150,33 +129,33 @@ Concept Cammer: Anweisung H.
 an den Cammerrentmeister
 Stackmann
   
-     Der Cammerrentmeister Stackmann  
-     wird hiemit angewiesen, von dem  
-     Colon Krückeberg Nr: 10, zu Schirn- 
-     eichen für die demselben zur Ver-  
-     größerung seines Gartens u. Hof-  
+Der Cammerrentmeister Stackmann  
+wird hiemit angewiesen, von dem  
+Colon Krückeberg Nr: 10, zu Schirn- 
+eichen für die demselben zur Ver-  
+größerung seines Gartens u. Hof-  
 
 Exp: per Boltesp
 
-     raums ausgewiesene Plätze, welche         
-     zusam̅en 21 Ruten 34 Fuß Dec:  
-     betragen, das Kaufgeld per Rute mit 24 mgl. u  
-     also vierzehn Rthlr 8 mgl. 1 d. zu  
-     erheben, in der Cammerrechnung  
-     gehöriges Orts zu vereinnahmen,  
-     und solche mit dieser Anweisung  
-     zu rechtfertigen. Bückeburg  
-     den 27. October 1800.  
-     Gräflich : p  
-                            Mkaas  
-     Juris Danckwerk  
-     Wint  
+raums ausgewiesene Plätze, welche         
+zusam̅en 21 Ruten 34 Fuß Dec:  
+betragen, das Kaufgeld per Rute mit 24 mgl. u  
+also vierzehn Rthlr 8 mgl. 1 d. zu  
+erheben, in der Cammerrechnung  
+gehöriges Orts zu vereinnahmen,  
+und solche mit dieser Anweisung  
+zu rechtfertigen. Bückeburg  
+den 27. October 1800.  
+Gräflich : p  
+                       Mkaas  
+Juris Danckwerk  
+Wint  
          
 
 
 
-     ---------  
-     Wipperman  
+---------  
+Wipperman  
 ....
 
 |
@@ -185,14 +164,18 @@ Concept Cammer: Directive
 to the Chamber Rentmaster
 Stackmann
 
-The Chamber Rentmaster, Stackmann, is hereby instructed to collect from tenant farmer Krückeberg, No. 10, at
-Stirneichen, the purchase price for the plots assigned to him for enlarging his garden and farmyard.
+The Chamber Rentmaster, Stackmann, is hereby instructed to
+collect from tenant farmer Krückeberg, No. 10, at Stirneichen,
+the purchase price for the plots assigned to him for enlarging
+his garden and farmyard.
 
-These plots together measure 21 rods and 34 feet (decimal). The purchase price is to be calculated at 24
-Mariengroschen per rod, amounting to a total of 14 Reichsthaler, 8 Mariengroschen, and 1 Pfennig.
+These plots together measure 21 rods and 34 feet (decimal). The
+purchase price is to be calculated at 24 Mariengroschen per rod,
+amounting to a total of 14 Reichsthaler, 8 Mariengroschen, and 1
+Pfennig.
 
-This sum is to be entered in the Chamber accounts under the appropriate heading and accounted for with this
-directive.
+This sum is to be entered in the Chamber accounts under the
+appropriate heading and accounted for with this directive.
 
 (Dispatched by Bolte.)
 
