--- a/modules/1237/pages/doc5-full.adoc
+++ b/modules/1237/pages/doc5-full.adoc
@@ -148,7 +148,7 @@ zu rechtfertigen. Bückeburg
 den 27. October 1800.  
 Gräflich : p  
                        Mkaas  
-Juris Danckwerk  
+[???] Danckwerk  
 Wint  
          
 
@@ -183,9 +183,10 @@ Bückeburg, 27 October 1800
 For the Count
 
 Mkaas
-Juris Danckwerk
+[???] Danckwerk
 Wint
 
+-------------
 Wippermann
 ....
 |===
