--- a/modules/1237/pages/doc5-full.adoc
+++ b/modules/1237/pages/doc5-full.adoc
@@ -21,7 +21,8 @@ image::10-left-page.png[scale=25,link=self]
 |Transliteration|Translation
 
 |
-....
+[verse]
+____
 ad nr. D: 322. S. S.
 Concept Cammer : Rescripts  
 an die Beamte zu Buckeburg  
@@ -64,45 +65,49 @@ Anstatt p[er]
                    Mkaas
               Wint
 [Mgr?] Danckwerk 
-....
+____
 
 |
-....
+[verse]
+____
 Regarding No. D: 322, as noted above
 Draft: Cammer directive
 To the officials in Bückeburg
 
 Very Gracious Lords,
 
-In reply to your report dated the 18th
-of this month concerning the land
-set aside for the farmer Krückeberg, No. 10
-in Berenbusch, for the purpose of enlarging
-his farmyard and garden—specifically, a total
-area of 19 rods and 44 feet plus 1 rod and 90
-feet.
+In reply to your report dated the 18th of
+this month concerning the land set aside for
+the farmer Krückeberg, No. 10 in Berenbusch,
+for the purpose of enlarging his farmyard and
+garden—specifically, a total area of 19 rods
+and 44 feet plus 1 rod and 90 feet.
 
-This land is to be subject, starting from Michaelmas
-(29 September) of this year, to an annual ground
-rent of 2 Mariengroschen and 1 Pfennig.
+This land is to be subject, starting from
+Michaelmas (29 September) of this year, to an
+annual ground rent of 2 Mariengroschen and 1
+Pfennig.
 
 We hereby confirm without reservation:
                 
-That we approve the assignment of this land to
-him under the same terms and conditions already
-communicated to you in Our official order dated
-11 March 1799, and we also approve the proposed
-annual ground rent.
+That we approve the assignment of this land
+to him under the same terms and conditions
+already communicated to you in Our official
+order dated 11 March 1799, and we also
+approve the proposed annual ground rent.
 
-You are to ensure that Farmer Krückeberg fulfills
-all the conditions you have no doubt already made
-known to him.
+You are to ensure that Farmer Krückeberg
+fulfills all the conditions you have no doubt
+already made known to him.
 
-He is now required to pay the set purchase price at
-a rate of 2 Reichsthaler and 4 Mariengroschen per rod,
-totaling 14 Reichsthaler, 8 Mariengroschen,
-and 1 Pfennig. This payment must be made to Our revenue
-office.
+He is now required to pay the set purchase
+price at a rate of 2 Reichsthaler and 4
+Mariengroschen per rod, totaling 14
+Reichsthaler, 8 Mariengroschen, and 1
+Pfennig. This payment must be made to Our
+revenue office.
+
+(Dispatched by: Bolte)
 
 We remain,
 Bückeburg, 27 October 1800
@@ -111,9 +116,7 @@ On behalf of the Count
                                Mkaas
                              Wint
 [Mgr?] Danckwerk
-
-(Dispatched by: Bolte)
-....
+____
 |===
 
 [[rescript2]]
@@ -124,7 +127,8 @@ On behalf of the Count
 |Transliteration|Translation
 
 |
-....
+[verse]
+____
 Concept Cammer: Anweisung H.  
 an den Cammerrentmeister
 Stackmann
@@ -153,29 +157,31 @@ Wint
          
 
 
-
----------  
 Wipperman  
-....
+____
 
 |
-....
+[verse]
+____
 Concept Cammer: Directive
 to the Chamber Rentmaster
 Stackmann
 
-The Chamber Rentmaster, Stackmann, is hereby instructed to
-collect from tenant farmer Krückeberg, No. 10, at Stirneichen,
-the purchase price for the plots assigned to him for enlarging
-his garden and farmyard.
+The Chamber Rentmaster, Stackmann, is hereby
+instructed to collect from tenant farmer
+Krückeberg, No. 10, at Stirneichen, the
+purchase price for the plots assigned to him
+for enlarging his garden and farmyard.
 
-These plots together measure 21 rods and 34 feet (decimal). The
-purchase price is to be calculated at 24 Mariengroschen per rod,
-amounting to a total of 14 Reichsthaler, 8 Mariengroschen, and 1
-Pfennig.
+These plots together measure 21 rods and 34
+feet (decimal). The purchase price is to be
+calculated at 24 Mariengroschen per rod,
+amounting to a total of 14 Reichsthaler, 8
+Mariengroschen, and 1 Pfennig.
 
-This sum is to be entered in the Chamber accounts under the
-appropriate heading and accounted for with this directive.
+This sum is to be entered in the Chamber
+accounts under the appropriate heading and
+accounted for with this directive.
 
 (Dispatched by Bolte.)
 
@@ -186,9 +192,10 @@ Mkaas
 [???] Danckwerk
 Wint
 
--------------
+
+
 Wippermann
-....
+____
 |===
 
 [NOTE]
