--- a/modules/1237/pages/doc5-overview.adoc
+++ b/modules/1237/pages/doc5-overview.adoc
@@ -18,7 +18,9 @@ land—two adjoining plots totaling **21 rods, 34 feet**—was to enlarge his fa
 They proposed an annual *Rottzins* (ground rent) of **2 Mariengroschen, 1 Pfennig**, beginning *Michaelmas* (29
 September) 1800, and a purchase price of **2 Reichsthaler, 4 Mariengroschen per rod**.
 
+[role="section-narrow"]
 == 27 October 1800 – Rescript 1: Approval of Land Assignment
+
 The Cammer replied in its first Rescript (*ad nr. D: 322. S.S.*), formally approving:
 * The allocation of the two plots under the same terms set out in the Cammer’s earlier order of **11 March 1799**.
 * The proposed *Rottzins* of 2 Mariengroschen, 1 Pfennig annually.
