--- a/modules/1237/pages/doc5-header.adoc
+++ b/modules/1237/pages/doc5-header.adoc
@@ -1,11 +1,13 @@
 = Document 5 Header
 :page-role: wide
 
+image::doc5-header.png[scale=25,link=self]
+
+[role="section-narrow"]
+== Header Explained
 Document 5's header tells us it is the Vormundschaftliche Cammer's official reply to Document 4, which 
 contained the submission of the geometric drawings of the parcels to be prospectively allocated to Jobst
 Heinrich Krückeberg along with the Ämters recommendation that Jobst Heinrich "be assigned this land."
-
-image::doc5-header.png[scale=25,link=self]
 
 When Document 4 was sent to the Cammer, they xref:doc4-header.adoc[registered it] as "Cam: Nr. 322 Forstsachen (
 Cammer No. 322 Forestry Matters)." When they sent Docment 5, their official reply, they linked it back to
