--- a/modules/1237/pages/doc5-overview.adoc
+++ b/modules/1237/pages/doc5-overview.adoc
@@ -1,5 +1,4 @@
 = Document 5: Narrative Overview (Oct 1800)
-:page-role: wide
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
@@ -8,7 +7,7 @@
 |image::10-left-page.png[scale=25,link=self]
 |===
 
-[role="section-narrow"]
+//[role="section-narrow"]
 == 18 October 1800 – Local Officials' Report
 
 The Ämter Bückeburg and Arensburg submitted a report to the Vormundschaftliche Cammer regarding the proposed
@@ -18,7 +17,7 @@ land—two adjoining plots totaling **21 rods, 34 feet**—was to enlarge his fa
 They proposed an annual *Rottzins* (ground rent) of **2 Mariengroschen, 1 Pfennig**, beginning *Michaelmas* (29
 September) 1800, and a purchase price of **2 Reichsthaler, 4 Mariengroschen per rod**.
 
-[role="section-narrow"]
+//[role="section-narrow"]
 == 27 October 1800 – Rescript 1: Approval of Land Assignment
 
 The Cammer replied in its first Rescript (*ad nr. D: 322. S.S.*), formally approving:
@@ -29,7 +28,7 @@ revenue office.
 
 The local officials were instructed to ensure Krückeberg fulfilled all stated conditions.
 
-[role="section-narrow"]
+//[role="section-narrow"]
 == 27 October 1800 – Rescript 2: Directive to Collect Purchase Price
 
 In a second Rescript on the same day, addressed to **Cammer Rentmaster Stackmann**, the Cammer ordered:
@@ -41,7 +40,7 @@ per rod (total 14 Reichsthaler, 8 Mariengroschen, 1 Pfennig).
 
 The marginal note *Exp: per Bolte* records that the order was dispatched by the official Bolte.
 
-[role="section-narrow"]
+//[role="section-narrow"]
 == Significance
 
 These two Rescripts represent the **final administrative stage** of the case:
@@ -52,7 +51,7 @@ With these actions, the land enlargement for Krückeberg moved from **proposal t
 
 **TODO: FIX**
 
-[role="section-narrow"]
+//[role="section-narrow"]
 === Individual's Names in the Document <-- TODO: Correct!!!!!!
 
 [cols="1,2,4",options="header"]
