--- a/modules/1237/pages/doc5-rescripts.adoc
+++ b/modules/1237/pages/doc5-rescripts.adoc
@@ -96,6 +96,7 @@ a rate of 2 Reichsthaler and 4 Mariengroschen per rod,
 totaling 14 Reichsthaler, 8 Mariengroschen,
 and 1 Pfennig. This payment must be made to Our revenue
 office.
+
 (Dispatched by: Bolte)
    
 We remain,
@@ -128,7 +129,7 @@ Colon Krückeberg Nr: 10, zu Schirn-
 eichen für die demselben zur Ver-  
 größerung seines Gartens u. Hof-  
 
-Exp: per Boltesp
+Exp: per Bolte
 
 raums ausgewiesene Plätze, welche         
 zusam̅en 21 Ruten 34 Fuß Dec:  
@@ -172,7 +173,7 @@ This sum is to be entered in the Chamber
 accounts under the appropriate heading and
 accounted for with this directive.
 
-(Dispatched by Bolte.)
+(Dispatched by Bolte)
 
 Bückeburg, 27 October 1800
 For the Count
