--- a/modules/1237/pages/doc1-full.adoc
+++ b/modules/1237/pages/doc1-full.adoc
@@ -36,18 +36,7 @@ B[ückeburg] 14. Jun. 1798
 == Jobst Heinrich Krückeberg's Petition
 
 The petition begins on the first page of document #1 and continues on its backside.
-It is the smaller text seen in both images.
-
-[cols="1a,1a",options="header",frame="none",grid="none"]
-|===
-^|Document 1 Front ^|Document 1 Back
-
-|image::02.png[align=left,scale=25,link=self]
-
-|image::03-left-page.png[algin=left,scale=25,link=self]
-|===
-
-== Petition
+It is the smaller text seen in both xref:doc1-overview.adoc[images].
 
 [cols="1a,1a",options="header",frame="none",grid="none"]
 |===
