--- a/modules/1237/pages/doc4pt5.adoc
+++ b/modules/1237/pages/doc4pt5.adoc
@@ -1,14 +1,17 @@
 = Document 4½: Surveyor's Drawing of Two Parcels (March 30, 1799)
 :page-role: wide
 
-Document 4½ is signed by Lieutenant Funck, a "beeidigter Landmesser" (sworn land surveyor). As a technical specialist, Funck was not part of the
-administrative offices (Amt) that issued Document 4. His report was therefore xref:doc-index.adoc[logged] as an independent piece of correspondence,
-even though it accompanied xref:doc4.adoc[document 4].
+image::08-right-page.png[link=self]
+
+== Explanation 
+
+Document 4½ is signed by Lieutenant Funck, a "beeidigter Landmesser" (sworn land surveyor). As a technical
+specialist, Funck was not part of the administrative offices (Amt) that issued Document 4. His report was therefore
+xref:doc-index.adoc[logged] as an independent piece of correspondence, even though it accompanied
+xref:doc4.adoc[document 4].
 
 NOTE: The surveyor completed his drawing over a year before it was enclosed in xref:doc4.adoc[document 4]. His drawing is
 date March 30, 1799, but Document 4, which is supplemented, is dated over a year later, October 18, 1800.
-
-image::08-right-page.png[link=self]
 
 == Transliteration and Translation
 
