--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -1,6 +1,7 @@
 .xref:index.adoc[]
 //NLA BU, K 2, A Nr. 1237
 * xref:cover.adoc[]
+* xref:actors.adoc[]
 * xref:timeline.adoc[]
 * xref:doc-index.adoc[]
 * xref:doc1-overview.adoc[]
