--- a/modules/1237/pages/actors.adoc
+++ b/modules/1237/pages/actors.adoc
@@ -31,7 +31,7 @@ todo
 todo
 
 Amt::  
-Amt = office (plural: Ämter or Aemter). The *Amt* was the *local or
+Amt = office. Plural: Ämter or Aemter. The *Amt* was the *local or
 regional administrative office* responsible for executing the instructions of the Vormundschaftlichte  Cammer
 ("guardianship" Chamber). It handled *field investigations, reports, local enforcement, and petitions*, and
 submitted findings to the Cammer. The Amt had no final authority but provided the *practical groundwork* for the
