--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -26,11 +26,11 @@
 ** Breakdown: Header, Cammer Directive
 *** xref:doc3-header.adoc[]
 *** xref:doc3.adoc[]
-* xref:doc4.adoc[]
+* Document 4: Overview <--TODO
 ** TODO: Full Document View
 **  Breakdown: Header, Parcels Proposed by Ämter
 *** xref:doc4-header.adoc[]
-*** TODO: Submission of Geometric Drawings
+*** xref:doc4.adoc[]
 * xref:reminder-note.adoc[]
 * xref:doc4pt5-overview.adoc[]
 ** xref:doc4pt5.adoc[]
