--- a/modules/1237/pages/doc1-header.adoc
+++ b/modules/1237/pages/doc1-header.adoc
@@ -25,7 +25,7 @@ B. 14. Jun 1798
 
 |
 ....
-Chamber:No:662                              Nr:1
+Chamber:No:662                              No.1
 Filed by the Chamber
 
 regarding the Forestry office report
