--- a/modules/1237/pages/doc6-header.adoc
+++ b/modules/1237/pages/doc6-header.adoc
@@ -3,6 +3,33 @@
 
 image::011-header.png[align=left,link=self]
 
+In this context, "Concept" (German: Concept or Conceptus in older administrative usage) does not mean “idea” in the
+modern sense.
+
+Here it means:
+
+[quote]
+____
+draft or copy prepared for internal records, usually a fair copy or clean copy made in the office before the final
+signed version is issued.
+____
+
+In 18th–19th century German bureaucratic practice — especially in the Schaumburg-Lippe Cammer and _Amt_ records —
+_Concept_ was used as a header for:
+
+* The *office draft* of an outgoing document (often kept in the file for reference).
+
+* Sometimes an *exact copy* of what was sent, written at the same time as the original.
+
+* Distinct from _Original_ (the one with official seals sent to the recipient) and _Expedition_ (dispatch record).
+
+So *"Concept Cammeral:Kaufbriefs"* means:
+
+[quote]
+____
+Draft of the Chamber’s purchase deed — i.e., the internal file copy of the official _Kaufbrief_ issued to formalize
+the land purchase.
+____
 
 == Transliteration and Translation
 
@@ -13,7 +40,7 @@ image::011-header.png[align=left,link=self]
 |
 [verse]
 ____
-Concept Cammeral-Kaufbriefs
+Draft of the Chamber's purchase deed
 für den Colon Kruckeberg  
 Nr: 10 zu Berenbusch über  
 einen Platz zur Vergrößerung  
@@ -23,11 +50,15 @@ ____
 |
 [verse]
 ____
-Draft of the Chamber Contract
+Draft of the Chamber ??????
 for the colonist Krückeberg
 No. 10 in Berenbusch
 concerning a parcel for the enlargement
 of his garden.
 ____
 |===
+
+== Glossary
+
+*Kaufbrief*:: A purchase document or contract, confirming the official transfer of property.
 
