--- a/modules/1237/pages/doc6.adoc
+++ b/modules/1237/pages/doc6.adoc
@@ -83,10 +83,10 @@ ____
 |
 [verse]
 ____
-Draft of the Chamber's purchase deed
-for the colonist Krückeberg
+Draft Chamber Purchase Deed
+for the Tenant Farmer Krückeberg
 No. 10 in Berenbusch
-concerning a parcel for the enlargement
+concerning a plot for the enlargement
 of his garden.
 
 Dispatched by Beÿer
