--- a/modules/1237/pages/doc6.adoc
+++ b/modules/1237/pages/doc6.adoc
@@ -77,13 +77,14 @@ verordnete Director und Räthe  
 Gladbeck v. Landesberg Maas  
 Windt  
 
+
 Wippermann
 ____
 
 |
 [verse]
 ____
-Draft Chamber Purchase Deed
+Chamber Deed of Sale [issued in place of a formal purchase deed]
 for the Tenant Farmer Krückeberg
 No. 10 in Berenbusch
 concerning a plot for the enlargement
