--- a/modules/1237/pages/doc3-overview.adoc
+++ b/modules/1237/pages/doc3-overview.adoc
@@ -12,13 +12,13 @@
 
 === Recapitulation: Cammer Reaction to Document 2 (10 March 1799)
 
-After first reviewing Documenmt 2 on March 6, 1799, the Cammer noted, on March 10, 1799, their intention to approve
+After first reviewing Document 2 on March 6, 1799, the Cammer noted, on March 10, 1799, their intention to approve
 Jobst Heinrich's request and to allocated land for him to purchase.
 
 === Offical Directive (11 March 1799) from Cammer to Ämter
 
 On March 11. 1799, the official reply of Vormundschaftliche Cammer to the Ämter (offices) of Bückeburg and Arensburg was
-written. The header references (*"S.S"* in upper left, meaing *referenced above*) the document denoted by *"Cam:53"*,
+written. The header references (*"S.S"* in upper left, meaning *referenced above*) the document denoted by *"Cam:53"*,
 which is Document 2.
 
 The Cammer states:
