--- a/modules/1237/pages/doc3.adoc
+++ b/modules/1237/pages/doc3.adoc
@@ -21,7 +21,7 @@ The complete text and its translation:
 |
 [verse]
 ____
-ad nr: Cam: 53. S. S. [Signatum Supra]      3
+ad nr: Cam: 53. S. S. [Signatum Supra]     
 Concept Cammer: Rescript
 an die Beamten zu Buckeburg
 
