--- a/modules/1237/pages/doc3-header.adoc
+++ b/modules/1237/pages/doc3-header.adoc
@@ -76,7 +76,7 @@ ____
 |
 [verse]
 ____
-Regarding No. 53 from the Chamber (as noted above)
+Regarding No. 53 from the Chamber (supra scripta — as noted above)
 Draft of Chamber Directive
 to the officials in Bückeburg
 ____
