--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -26,7 +26,7 @@
 ** Breakdown: Header, Cammer Directive
 *** xref:doc3-header.adoc[]
 *** xref:doc3.adoc[]
-* Document 4: Overview <--TODO
+* xref:doc4-overview.adoc[]
 ** TODO: Full Document View
 **  Breakdown: Header, Parcels Proposed by Ämter
 *** xref:doc4-header.adoc[]
