--- a/modules/1237/pages/doc4-overview.adoc
+++ b/modules/1237/pages/doc4-overview.adoc
@@ -1,1 +1,24 @@
 = Document 4: Overview
+
+== Narrative Overview
+
+=== Transmission of Survey Drawing and Recommendation (18 October 1800)
+
+On **18 October 1800**, the Ämter of Bückeburg and Arensburg sent a formal report to the Vormundschaftliche Kammer,
+responding to the Cammer’s directive of **11 March 1799** (Document 3). The header notes the Cammer file number
+*Cam: Nr: 322* and classifies the matter under *Forstsachen* (“forestry matters”). The margin note *Betr.
+Ausweisung* (“Subject: Allocation”) specifies the purpose.
+
+The Ämter enclosed the **geometric survey drawing** for the two plots granted to Jobst Heinrich Krückeberg, No. 10
+in Berenbusch, for enlarging his garden and farmyard:
+
+* **19 rods 44 feet** (garden expansion) **1 rod 90 feet** (farmyard expansion)
+
+In total, this corresponds to the areas established earlier by the sworn surveyor (see Document 4½).
+
+The Ämter proposed that Krückeberg be required to pay an **annual ground rent** (*Rottzins*), starting on
+**Michaelmas** (29 September) of the current year (**1800**), in the amount of **2 Reichsthaler and 1 Pfennig**,
+excluding any exchange fees (*agio*).
+
+The letter was signed in Bückeburg by **J. H. Hablick** and **Stöling**.
+
