--- a/modules/1237/pages/doc5-full.adoc
+++ b/modules/1237/pages/doc5-full.adoc
@@ -43,7 +43,7 @@ von Euch ohne Zweifel bekannt
 gemachten Bedingungen genau  
 erfüllen möge, wie denn derselbe  
 nunmehr das bestimte Kaufgeld  
-per 4 Rute mit 2.4. nigl: folglich  
+per 4 Rute mit 24 mgl: folglich  
 überhaupt vierzehn Rthlr  
 8 mgl: 1 d. an Unsere Lammeroasse  
 zuzahlen hat. Wir verbleiben,  
