--- a/modules/1237/pages/doc5-full.adoc
+++ b/modules/1237/pages/doc5-full.adoc
@@ -65,46 +65,40 @@ To the officials in Bückeburg
 
 Very Gracious Lords,
 
-In reply to your report dated the 18th of
-this month concerning the land set aside for
-the farmer Krückeberg, No. 10 in Berenbusch,
-for the purpose of enlarging his farmyard and
-garden—specifically, a total area of 19 rods
-and 44 feet plus 1 rod and 90 feet.
+In reply to your report of the 18th of this
+month regarding the land assigned to
+Colon(ist) Krückeberg, No. 10 in Berenbusch,
+for the enlargement of his farmyard and
+garden — namely, a plot of 19 rods 44 feet
+and another of 1 rod 90 feet — and noting
+that, beginning at Michaelmas (29 September)
+of this year, and thereafter annually, a ground
+rent of 2 Mariengroschen and 1 Pfennig is to
+be paid:
 
-This land is to be subject, starting from
-Michaelmas (29 September) of this year, to an
-annual ground rent of 2 Mariengroschen and 1
-Pfennig.
+We hereby, without reservation, confirm that
+We have approved the allocation of these plots
+under the conditions communicated to you in
+Our rescript of 11 March 1799, as well as the
+proposed amount of ground rent.
 
-We hereby confirm without reservation:
-                
-That we approve the assignment of this land
-to him under the same terms and conditions
-already communicated to you in Our official
-order dated 11 March 1799, and we also
-approve the proposed annual ground rent.
-
-You are to ensure that Farmer Krückeberg
-fulfills all the conditions you have no doubt
-already made known to him.
-
-He is now required to pay the set purchase
-price at a rate of 2 Reichsthaler and 4
-Mariengroschen per rod, totaling 14
-Reichsthaler, 8 Mariengroschen, and 1
-Pfennig. This payment must be made to Our
-revenue office.
+You are to ensure that Colon Krückeberg
+fulfills the conditions already made known to
+him. He must now pay the agreed purchase
+price at a rate of 24 Mariengroschen per rod,
+amounting in total to 14 Reichsthaler,
+8 Mariengroschen, and 1 Pfennig, into Our
+Chamber treasury.
 
 (Dispatched by: Bolte)
 
 We remain,
 Bückeburg, 27 October 1800
-On behalf of the Count
-          
-                               Mkaas
-                             Wint
-[Mgr?] Danckwerk
+On behalf of the Count [in place of “per procurationem”]
+
+Mkaas
+Wint
+[H.?] Danckwerk
 ____
 |===
 
