--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -22,24 +22,19 @@
 *** xref:doc2-official-reaction.adoc[]
 * xref:image5-left-page.adoc[]
 * xref:doc3-overview.adoc[]
-** xref:doc3-full.adoc[]
-** Breakdown: Header, Cammer Directive
-*** xref:doc3-header.adoc[]
-*** xref:doc3.adoc[]
+** xref:doc3-header.adoc[]
+** xref:doc3.adoc[]
 * xref:doc4-overview.adoc[]
-**  Breakdown: Header, Parcels Proposed by Ämter
-*** xref:doc4-header.adoc[]
-*** xref:doc4.adoc[]
+** xref:doc4-header.adoc[]
+** xref:doc4.adoc[]
 * xref:reminder-note.adoc[]
 * xref:doc4pt5-overview.adoc[]
 ** xref:doc4pt5.adoc[]
 * xref:doc5-overview.adoc[]
-** Breakdown: Header, 1^st^ Directive, 2^nd^ Directive
-*** xref:doc5-header.adoc[]
-*** xref:doc5-rescripts.adoc#rescript1[Rescript 1 - Approval]
-*** xref:doc5-rescripts.adoc#rescript2[Rescript 2 - Contracts]
+** xref:doc5-header.adoc[]
+** xref:doc5-rescripts.adoc#rescript1[Rescript 1 - Approval]
+** xref:doc5-rescripts.adoc#rescript2[Rescript 2 - Contracts]
 //*** xref:doc5-collection-order.adoc[]
 * xref:doc6.adoc[]
-** Breakdown: Header, Final Decision
-*** xref:doc6-header.adoc[]
-*** xref:doc6.adoc[]
+** xref:doc6-header.adoc[]
+** xref:doc6.adoc[]
