--- a/modules/1237/pages/doc2-official-reaction.adoc
+++ b/modules/1237/pages/doc2-official-reaction.adoc
@@ -43,7 +43,7 @@ M
 ____
 
 |
-[verse, Response from the Gräflich vormundschaftliche Cammer* (Countly Guardianship Chamber)]
+[verse]
 ____
 The plot is therefore to be allocated,
 and since various residents in Berenbusch
